# tecgraf-cd

./: .gitignore  CDConfig.cmake.in  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SUCCESS_SUMMARY.md  cd.pc.in  run_opengl_tests.sh  simple_test  test_cd  test_cd.c  test_demo  test_demo.c  test_gl  test_gl.c  test_gl_debug  test_gl_enhanced  test_gl_ftgl  test_gl_homebrew  test_gl_safe  test_report_demo.html  test_report_fixed.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml  release.yml  security.yml
html/: wb_search.txt  wb_title.html  wb_tree.html
html/en/: cdlua.html  download.html  download_tips.html  guide.html  history.html  home.html  other.html  primitives.html  prod.html  screenshots.html  svn.html  to_do.html
html/en/drv/: cairo.html  cgm.html  dgn.html  direct2d.html  gdiplus.html  gl.html  imimage.html  irgb.html  pdf.html  pptx.html  ps.html  svg.html
html/en/func/: client.html  color.html  lines.html  other.html  text.html
html/examples/: emf2pdf.cpp
html/wb/: wb_usr.lua
mak.vc12/: cd.sln  cd.vcxproj  cdcairo.vcxproj  cdcore.vcxproj  cddirect2d.vcxproj  cdgdk.vcxproj  cdgdk3.vcxproj  cdgl.vcxproj  cdim.vcxproj  cdpdf.vcxproj  cdsimple.vcxproj  cdsimplegdk.vcxproj  cdsimplegdk3.vcxproj  cdtest.vcxproj  cdtestcairo.vcxproj  cdtestgdk.vcxproj  cdtestplus.vcxproj  cdxrender.vcxproj
mak.vc15/: cd.sln  cd.vcxproj  cdcore.vcxproj  cdgdiplus.vcxproj  cdlua.vcxproj  cdpdf.vcxproj  cdsimple.vcxproj
src/: cd_text.c  cd_vectortext.c  cd_windows.def
src/cairo/: cdcairoplus.c
src/dep/: cd.dep.MacOS264  cdcontextplus.dep.MacOS264  cdgl.dep.MacOS264  cdim.dep.MacOS264
src/drv/: cdgl.c  cdgl_ftgl_stubs.c  cdirgb.c
src/intcgm/: cd_intcgm.c
src/lua5/: cdlua5ctx.c  cdluacairo5.c
src/x11/: cdxdbuf.c
test/: CMakeLists.txt  README.md  basic_test.c  image_test.c  test_demo  x11_test.c
test/tests/: run_all_tests.c  test_attributes.c  test_backends.c  test_clipping.c  test_colors.c  test_comprehensive.c  test_edge_cases.c  test_font_access.c  test_images.c  test_irgb.c  test_opengl_backend.c  test_opengl_graphics.c  test_opengl_simple.c  test_paths.c  test_performance.c  test_primitives.c  test_regression.c  test_simple_mock.c  test_svg.c  test_text.c  test_transforms.c
test/utils/: test_utils.c  test_utils.h
